--- a/citations/references_Biomass_speciesParameters.bib
+++ b/citations/references_Biomass_speciesParameters.bib
@@ -52,9 +52,11 @@ pages={1123–1132} }
 @unpublished{
   BarrosEtAlinreview,
   title={Empowering ecologists with a PERFICT workflow: seamlessly linking data, parameterization, prediction, validation and visualization},
-author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.} }
+author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.},
+  year={in review} }
 
 @unpublished{
   BarrosEtAlinreview,
   title={Empowering ecologists with a PERFICT workflow: seamlessly linking data, parameterization, prediction, validation and visualization},
-author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.} }
+author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.},
+  year={in review} }
