fix git url + kable tables

--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -66,21 +66,21 @@ download.file(url = paste0("https://img.shields.io/badge/Biomass_speciesParamete
 
 ``` {r moduleBadge-Biomass-speciesParameters, echo = FALSE, eval = TRUE, cache = FALSE, results = "asis"}
 ## try to automatically get the commit URL and the path to the badge image
-badgeURL <-  if (!git2r::is_detached()){
+badgeURL <- if (!git2r::is_detached()) {
   commitSHA <- git2r::sha(git2r::revparse_single(".", "HEAD"))
-  repo <- sub(".*github.com:", "https://github.com/",
+  repo <- sub("[.]git$", "/commit/",
               git2r::branch_remote_url(git2r::branch_get_upstream(git2r::repository_head("."))))
-  repo <- sub(".git$", "/commit/", repo)
   paste0(repo, commitSHA)
 } else {
   ## if detached point to the first remote
-  badgeURL <- git2r::remote_url()[1]
+  git2r::remote_url()[1]
 }
+badgeURL <- sub(".*github[.]com:", "https://github.com/", badgeURL)
 
 badgePath <- normPath("figures/moduleVersionBadge.png")
 
 ## make string of markdown code to be executed as-is
-cat(paste0("[![module-version-Badge](", badgePath, ")](", badgeURL,")"))
+cat(paste0("[![module-version-Badge](", badgePath, ")](", badgeURL, ")"))
 ```
 
 ``` {r issuesBadge-Biomass-speciesParameters, echo = FALSE, eval = TRUE, cache = FALSE, results = "asis"}
@@ -399,9 +399,9 @@ ID). 'maxB' and 'maxANPP' values are (re-)calibrated by species.
 
 ```{r moduleInputs2-Biomass-speciesParameters, cache.rebuild = TRUE, echo = FALSE, eval = TRUE, message = FALSE}
 df_inputs <- SpaDES.core::moduleInputs("Biomass_speciesParameters", "..")
-knitr::kable(df_inputs, 
-             caption = "List of (ref:Biomass-speciesParameters) input objects and their description.") %>%
-  kableExtra::kable_styling(latex_options = c("scale_down", "repeat_header"), full_width = TRUE)
+caption <- "List of (ref:Biomass-speciesParameters) input objects and their description."
+knitr::kable(df_inputs, caption = caption) %>%
+  kableExtra::kable_styling(latex_options = c("repeat_header"))
 ```
 
 ### List of parameters {#bsppparam-params-list}
@@ -432,9 +432,9 @@ the GAMMs.
 
 ```{r moduleParams2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
 df_params <- SpaDES.core::moduleParams("Biomass_speciesParameters", "..")
-knitr::kable(df_params,
-             caption = "List of (ref:Biomass-speciesParameters) parameters and their description.") %>%
-  kableExtra::kable_styling(latex_options = c("scale_down", "repeat_header"), full_width = TRUE)
+caption <- "List of (ref:Biomass-speciesParameters) parameters and their description."
+knitr::kable(df_params, caption = caption) %>%
+  kableExtra::kable_styling(latex_options = c("repeat_header"))
 ```
 
 ### List of outputs {#bsppparam-outputs-list}
@@ -452,9 +452,9 @@ name.
 
 ```{r moduleOutputs-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
 df_outputs <- SpaDES.core::moduleOutputs("Biomass_speciesParameters", "..")
-knitr::kable(df_outputs,
-             caption = "List of (ref:Biomass-speciesParameters) output objects and their description.") %>%
-  kableExtra::kable_styling(latex_options = c("scale_down", "repeat_header"), full_width = TRUE)
+caption <- "List of (ref:Biomass-speciesParameters) output objects and their description."
+knitr::kable(tab, caption = caption) %>%
+  kableExtra::kable_styling(latex_options = c("repeat_header"))
 ```
 
 ### Simulation flow and module events {#bsppparam-sim-flow}
