--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -39,8 +39,25 @@ if (!require(Require)) {
   install.packages("Require")
   library(Require)
 }
-Require(c("dplyr", "SpaDES.core", "git2r", "kableExtra"),
-        require = FALSE)
+
+Require(c("SpaDES.core", "git2r", "openxlsx"), require = FALSE)
+Require(c("dplyr", "data.table", "kableExtra", "pander"))
+
+## TODO: move to package
+wrapStrFun <- function(x, size, breakChar = "\n") {
+  sapply(x, function(xx) {
+    if (is.na(xx) | nchar(xx) <= size) {
+      xx
+    } else {
+      paste(stringi::stri_sub(xx, seq(1, nchar(xx), by = size), length = size), collapse = breakChar)
+    }
+  })
+}
+
+## TODO: move to package
+addLabel <- function(caption = "", tag = "tab") {
+ paste0("\\label{", tag, ":", knitr::opts_current$get("label"), "}", caption)
+}
 ```
 
 ```{r badgeFigs-Biomass-speciesParameters, include = FALSE, eval = TRUE, cache = FALSE}
@@ -397,12 +414,30 @@ have been produced by another module. It **must** contain the columns
 'speciesCode', 'maxB' and 'maxANPP' and 'ecoregionGroup' (the ecolocation
 ID). 'maxB' and 'maxANPP' values are (re-)calibrated by species.
 
-```{r moduleInputs2-Biomass-speciesParameters, cache.rebuild = TRUE, echo = FALSE, eval = TRUE, message = FALSE}
+\newpage
+\blandscape
+
+```{r moduleInputs2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
 df_inputs <- SpaDES.core::moduleInputs("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) input objects and their description."
-knitr::kable(df_inputs, caption = caption) %>%
-  kableExtra::kable_styling(latex_options = c("repeat_header"))
+
+# knitr::kable(df_inputs, caption = caption) %>%
+#   kableExtra::kable_styling(latex_options = c("repeat_header"))
+
+## setting the options is necessary to escape special characters (must have chunk opt results = 'asis')
+opts <- panderOptions("knitr.auto.asis", FALSE)  
+## pander's hyphenation doesn't work with URLs and big/strange words (like obj names). split manually
+df_inputs$objectName <- wrapStrFun(df_inputs$objectName, size = 10)
+df_inputs$objectClass <- wrapStrFun(df_inputs$objectClass, size = 10)
+df_inputs$desc <- wrapStrFun(df_inputs$desc, size = 40)
+df_inputs$sourceURL <- wrapStrFun(df_inputs$sourceURL, size = 10)
+
+pander::pander(df_inputs, caption = addLabel(caption), justify = "left",
+               split.tables = Inf, keep.line.breaks = TRUE)
+options(opts)
 ```
+
+\elandscape
 
 ### List of parameters {#bsppparam-params-list}
 
@@ -430,12 +465,24 @@ the GAMMs.
 
 -   `quantileAgeSubset` -- upper quantile age value used to subset PSP data.
 
-```{r moduleParams2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
+\newpage
+\blandscape
+
+
+```{r moduleParams2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
 df_params <- SpaDES.core::moduleParams("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) parameters and their description."
-knitr::kable(df_params, caption = caption) %>%
-  kableExtra::kable_styling(latex_options = c("repeat_header"))
+
+# knitr::kable(df_params, caption = caption) %>%
+#   kableExtra::kable_styling(latex_options = c("repeat_header"))
+
+opts <- panderOptions("knitr.auto.asis", FALSE)    
+pander(df_params, caption = addLabel(caption), justify = "left", 
+       digits = 3, split.cells = c(15,15, 5, 5, 5, 40), split.tables = Inf)
+options(opts)
 ```
+
+\elandscape
 
 ### List of outputs {#bsppparam-outputs-list}
 
@@ -453,8 +500,13 @@ name.
 ```{r moduleOutputs-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
 df_outputs <- SpaDES.core::moduleOutputs("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) output objects and their description."
-knitr::kable(tab, caption = caption) %>%
-  kableExtra::kable_styling(latex_options = c("repeat_header"))
+
+# knitr::kable(tab, caption = caption) %>%
+#   kableExtra::kable_styling(latex_options = c("repeat_header"))
+
+## options and results='asis' not necessary when not using landscape
+pander(df_outputs, caption = addLabel(caption), justify = "left", 
+       digits = 3, split.cells = c(15, 15, 40), split.tables = Inf)
 ```
 
 ### Simulation flow and module events {#bsppparam-sim-flow}
