--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -41,29 +41,7 @@ if (!require(Require)) {
 }
 
 Require(c("SpaDES.core", "git2r", "openxlsx"), require = FALSE)
-Require(c("dplyr", "data.table", "kableExtra", "pander"))
-
-## TODO: move to package
-wrapStrFun <- function(x, size, breakChar = "\n") {
-  sapply(x, function(xx) {
-    if (is.na(xx) | nchar(xx) <= size) {
-      xx
-    } else {
-      paste(stringi::stri_sub(xx, seq(1, nchar(xx), by = size), length = size), collapse = breakChar)
-    }
-  })
-}
-
-## TODO: move to package
-addLabel <- function(caption = "", tag = "tab") {
-  chunkLabel <- knitr::opts_current$get("label")
-  pretag <- if (knitr::is_latex_output()) {
-    paste0("\\label{", tag, ":",chunkLabel , "}")
-  } else {
-      paste0("(\\#", tag, ":", chunkLabel, ")")
-    }
-  paste0(pretag, caption)
-}
+Require(c("dplyr", "data.table", "kableExtra", "pander", "PredictiveEcology/SpaDES.docs"))
 ```
 
 ```{r badgeFigs-Biomass-speciesParameters, include = FALSE, eval = TRUE, cache = FALSE}
@@ -431,16 +409,21 @@ caption <- "List of (ref:Biomass-speciesParameters) input objects and their desc
 #   kableExtra::kable_styling(latex_options = c("repeat_header"))
 
 ## setting the options is necessary to escape special characters (must have chunk opt results = 'asis')
-opts <- panderOptions("knitr.auto.asis", FALSE)  
+# opts <- panderOptions("knitr.auto.asis", FALSE)  
 ## pander's hyphenation doesn't work with URLs and big/strange words (like obj names). split manually
-df_inputs$objectName <- wrapStrFun(df_inputs$objectName, size = 10)
-df_inputs$objectClass <- wrapStrFun(df_inputs$objectClass, size = 10)
-df_inputs$desc <- wrapStrFun(df_inputs$desc, size = 40)
-df_inputs$sourceURL <- wrapStrFun(df_inputs$sourceURL, size = 10)
+if (knitr::is_latex_output()) {
+  df_inputs$objectName <- wrapStrFun(df_inputs$objectName, size = 10)
+  df_inputs$objectClass <- wrapStrFun(df_inputs$objectClass, size = 10)
+  df_inputs$desc <- wrapStrFun(df_inputs$desc, size = 40)
+  df_inputs$sourceURL <- wrapStrFun(df_inputs$sourceURL, size = 10)
+}
 
-pander::pander(df_inputs, caption = addLabel(caption), justify = "left",
-               split.tables = Inf, keep.line.breaks = TRUE)
-options(opts)
+# pander::pander(df_inputs, caption = addLabel(caption), justify = "left",
+#                split.tables = Inf, keep.line.breaks = TRUE)
+# options(opts)
+panble(df_inputs, caption, landscape = TRUE,
+       panderArgs = list("justify" = "left", "split.tables" = Inf,
+                                       "keep.line.breaks" = TRUE))
 ```
 
 \elandscape
@@ -482,10 +465,12 @@ caption <- "List of (ref:Biomass-speciesParameters) parameters and their descrip
 # knitr::kable(df_params, caption = caption) %>%
 #   kableExtra::kable_styling(latex_options = c("repeat_header"))
 
-opts <- panderOptions("knitr.auto.asis", FALSE)    
-pander(df_params, caption = addLabel(caption), justify = "left", 
-       digits = 3, split.cells = c(15,15, 5, 5, 5, 40), split.tables = Inf)
-options(opts)
+# opts <- panderOptions("knitr.auto.asis", FALSE)    
+# pander(df_params, caption = addLabel(caption), justify = "left", 
+#        digits = 3, split.cells = c(15,15, 5, 5, 5, 40), split.tables = Inf)
+# options(opts)
+panble(df_params, caption, landscape = TRUE,
+       panderArgs = list("justify" = "left", "digits" = 3, "split.cells" = c(15,15, 5, 5, 5, 40), "split.tables" = Inf))
 ```
 
 \elandscape
@@ -503,16 +488,17 @@ name.
 
 -   `speciesGAMMs` -- the fitted GAMM model objects for each species.
 
-```{r moduleOutputs-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE}
+```{r moduleOutputs-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
 df_outputs <- SpaDES.core::moduleOutputs("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) output objects and their description."
 
 # knitr::kable(tab, caption = caption) %>%
 #   kableExtra::kable_styling(latex_options = c("repeat_header"))
 
-## options and results='asis' not necessary when not using landscape
-pander(df_outputs, caption = addLabel(caption), justify = "left", 
-       digits = 3, split.cells = c(15, 15, 40), split.tables = Inf)
+# pander(df_outputs, caption = addLabel(caption), justify = "left", 
+#        digits = 3, split.cells = c(15, 15, 40), split.tables = Inf)
+panble(df_outputs, caption, 
+       panderArgs = list("justify" = "left", "digits" = 3, "split.cells" = c(15, 15, 40), "split.tables" = Inf))
 ```
 
 ### Simulation flow and module events {#bsppparam-sim-flow}
