"merge" masterOLD into development (not a true merge see notes!)
* The following changes to .R were brought in:
     - author lists
     - metadata organisation and cleaning -- in objects that existed in both branches
     - a few single quotes changed to double quotes
     - SpaDES.core added as a dependency; reproducible bumped; package list reorganized;
     - changes to .Rmd NOT brought in, as they have to be manual. 
     - minor changes in references

--- a/citations/references_Biomass_speciesParameters.bib
+++ b/citations/references_Biomass_speciesParameters.bib
@@ -52,12 +52,14 @@ pages={1123–1132} }
 @unpublished{
   BarrosEtAlinreview,
   title={Empowering ecologists with a PERFICT workflow: seamlessly linking data, parameterization, prediction, validation and visualization},
-author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.} }
+author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.},
+  year={in review} }
 
 @unpublished{
   BarrosEtAlinreview,
   title={Empowering ecologists with a PERFICT workflow: seamlessly linking data, parameterization, prediction, validation and visualization},
-author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.} }
+author={Barros, Ceres and Luo, Yong and Chubaty, Alexander M. and Eddy, I.M.S and Micheletti, Tatiane and Boisvenue, Céline and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.},
+  year={in review} }
 
 @inproceedings{CobleLee2006,
 	title = {Use of a generalized sigmoid growth function to predict site index for unmanaged loblolly and slash pine plantations in East Texas},
