--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -37,8 +37,7 @@ if (!file.exists("citations/ecology-letters.csl")) {
 
 library(Require)
 
-Require(c("SpaDES.core", "git2r", "openxlsx"), require = FALSE, install = FALSE)
-Require(c("dplyr", "data.table", "kableExtra",
+Require(c("SpaDES.core", "git2r", "dplyr", "data.table", "kableExtra",
           "pander", "PredictiveEcology/SpaDES.docs"),
         upgrade = FALSE, install = FALSE)
 ```
@@ -57,7 +56,7 @@ if (!file.exists("figures/issuesBadge.png")) {
                 mode = 'wb')
 }
 
-modversion <- paste(unlist(SpaDES.core::moduleMetadata(module = 'Biomass_speciesParameters', path = '..')$version), collapse = ".")
+modversion <- paste(unlist(moduleMetadata(module = 'Biomass_speciesParameters', path = '..')$version), collapse = ".")
 download.file(url = paste0("https://img.shields.io/badge/Biomass_speciesParameters-", paste0("v.%20", modversion),
                            "-%3CCOLOR%3E.png"),
               destfile = "figures/moduleVersionBadge.png",
@@ -76,14 +75,14 @@ modulePath <- if (grepl("Biomass_speciesParameters$", normPath("."))) {
     normPath(modulePath)
   }
 
-badgeURL <- if (!git2r::is_detached(modulePath)) {
-  commitSHA <- git2r::sha(git2r::revparse_single(modulePath, "HEAD"))
+badgeURL <- if (!is_detached(modulePath)) {
+  commitSHA <- sha(revparse_single(modulePath, "HEAD"))
   repo <- sub("[.]git$", "/commit/",
-              git2r::branch_remote_url(git2r::branch_get_upstream(git2r::repository_head(modulePath))))
+              branch_remote_url(branch_get_upstream(repository_head(modulePath))))
   paste0(repo, commitSHA)
 } else {
   ## if detached point to the first remote
-  git2r::remote_url(modulePath)[1]
+  remote_url(modulePath)[1]
 }
 badgeURL <- sub(".*github[.]com:", "https://github.com/", badgeURL)
 
@@ -106,7 +105,7 @@ cat(paste0("[![Issues-badge](", badgePath, ")](", badgeURL,")"))
 
 #### Authors:
 
-`r paste(as.character(SpaDES.core::moduleMetadata(module = 'Biomass_speciesParameters', path = '..')$authors), sep = ', ')`
+`r paste(as.character(moduleMetadata(module = 'Biomass_speciesParameters', path = '..')$authors), sep = ', ')`
 <!-- ideally separate authors with new lines, '\n' not working -->
 
 **This documentation is work in progress. Potential discrepancies and omissions
@@ -411,7 +410,7 @@ ID). 'maxB' and 'maxANPP' values are (re-)calibrated by species.
 \blandscape
 
 ```{r moduleInputs2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
-df_inputs <- SpaDES.core::moduleInputs("Biomass_speciesParameters", "..")
+df_inputs <- moduleInputs("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) input objects and their description."
 
 # knitr::kable(df_inputs, caption = caption) %>%
@@ -468,7 +467,7 @@ the GAMMs.
 
 
 ```{r moduleParams2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
-df_params <- SpaDES.core::moduleParams("Biomass_speciesParameters", "..")
+df_params <- moduleParams("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) parameters and their description."
 
 # knitr::kable(df_params, caption = caption) %>%
@@ -498,7 +497,7 @@ name.
 -   `speciesGAMMs` -- the fitted GAMM model objects for each species.
 
 ```{r moduleOutputs-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
-df_outputs <- SpaDES.core::moduleOutputs("Biomass_speciesParameters", "..")
+df_outputs <- moduleOutputs("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) output objects and their description."
 
 # knitr::kable(tab, caption = caption) %>%
