--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -423,7 +423,8 @@ if (knitr::is_latex_output()) {
 
 panble(df_inputs, caption, landscape = TRUE,
        panderArgs = list("justify" = "left", "split.tables" = Inf,
-                                       "keep.line.breaks" = TRUE))
+                                       "keep.line.breaks" = TRUE),
+       kable_stylingArgs = list(full_width = TRUE))
 ```
 
 \elandscape
@@ -463,7 +464,8 @@ df_params <- moduleParams("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) parameters and their description."
 
 panble(df_params, caption, landscape = TRUE,
-       panderArgs = list("justify" = "left", "digits" = 3, "split.cells" = c(15,15, 5, 5, 5, 40), "split.tables" = Inf))
+       panderArgs = list("justify" = "left", "digits" = 3, "split.cells" = c(15,15, 5, 5, 5, 40), "split.tables" = Inf),
+       kable_stylingArgs = list(full_width = TRUE))
 ```
 
 \elandscape
@@ -486,7 +488,8 @@ df_outputs <- moduleOutputs("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) output objects and their description."
 
 panble(df_outputs, caption, 
-       panderArgs = list("justify" = "left", "digits" = 3, "split.cells" = c(15, 15, 40), "split.tables" = Inf))
+       panderArgs = list("justify" = "left", "digits" = 3, "split.cells" = c(15, 15, 40), "split.tables" = Inf),
+       kable_stylingArgs = list(full_width = TRUE))
 ```
 
 ### Simulation flow and module events {#bsppparam-sim-flow}
