--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -134,31 +134,23 @@ matching theoretical species' growth curves obtained with different trait values
 (see [Simulated species data](#bsppparam-simdata)) against observed growth
 curves derived from Permanent Sample Plots (PSP data) across Canada (see
 [Permanent sample plot data](#bsppparam-PSPdata)), to find the combination of
-trait values that allows a better match to the observed curves.
-
-In particular, it directly calibrates the `growthcurve`, `mortalityshape`
-invariant species traits and two new traits `inflationFactor` and
-`mANPPproportion`, which are used to calibrate previously estimated species
-maximum biomass (`maxB`) and maximum aboveground net primary productivity
-(`maxANPP`) values (see [Parameter estimation/calibration](#bsppparam-calib)).
+trait values that allows a better match to the observed curves. In particular, 
+it calibrates the `growthcurve`, `mortalityshape`, maximum biomass (`maxB`) and
+maximum aboveground net primary productivity (`maxANPP`) traits (see [Parameter estimation/calibration](#bsppparam-calib)).
 
 This module **will not** obtain other traits or parameters used in
-*Biomass_core* and so must be used in conjunction with another data/calibration
-module that does so (e.g., *Biomass_borealDataPrep*).
-
-It can however be used stand-alone in an initial developmental phase for easier
-inspection of the statistical calibration procedure employed.
+*Biomass_core* and so it is meant to be used in conjunction with another data/calibration
+module that does so (e.g., *Biomass_borealDataPrep*). However it can be used stand-alone 
+in an initial developmental phase for easier inspection of the statistical 
+calibration procedure employed.
 
 As of `r format(Sys.time(), '%B %d, %Y')`, the *raw* PSP data used in this module is not freely
 available, and data sharing agreements must be obtained from the governments of
 SK, AB, and BC to obtain it. However, the *processed and anonymized* PSP data is 
 provided via a Google Drive folder accessed automatically by the module.
 
-**A Google Account is therefore necessary to access the data used for
+*Google Account is therefore necessary to access the data used for
 calibration.**
-
-If you do not have a Google Account, or cannot access the data, please report an
-issue by clicking on the "Get help" link above.
 
 ### Links to other modules {#bsppparam-links-modules}
 
@@ -179,18 +171,23 @@ Used upstream from *Biomass_speciesParameters*;
 forest dynamics simulation module. Used downstream from
 *Biomass_speciesParameters*;
 
+-   [*Biomass_speciesFactorial*](https://github.com/PredictiveEcology/Biomass_core):
+a module that generates theoretical species curves by running thousands of 
+*Biomass_core* simulations on landscapes populated by one or more 
+species, each simulation using a different set of species trait values.
+
 ## Module manual
 
 ### General functioning {#bsppparam-general-functioning}
 
 Tree cohort growth and mortality in *Biomass_core* are essentially determined by
-five parameters: the invariant species traits 'growth curve' (`growthcurve`),
-'mortality shape', (`mortalityshape`) and `longevity`, and the spatio-temporally
-varying traits maximum biomass (`maxB`) and maximum aboveground net primary
-productivity (`maxANPP`).
+five parameters: `growthcurve`, `mortalityshape`, maximum biomass (`maxB`), maximum 
+aboveground net primary productivity (`maxANPP`) and `longevity`.
 
-All five traits strongly modulate the shape of species growth curves and so it
-is important that they are calibrated to the study area in question.
+The `growthcurve` and `mortalityshape` parameters (called 'growth curve' and 
+'mortality shape' in LANDIS-II Biomass Succession Extension v3.2, the base model
+for *Biomass_core*) strongly modulate the shape of species growth curves and so 
+it is important that they are calibrated to the study area in question.
 
 Also, the growth and mortality equations used in *Biomass_core* are non-linear
 and their resulting actual biomass accumulation curve is an emergent phenomenon
@@ -198,46 +195,47 @@ due to competition effects. This means that the ideal trait/parameter values
 should not be estimated on pure single species growth conditions, as their
 resulting dynamics will be different in a multi-species context.
 
-*Biomass_speciesParameters* attempts to address these issues (at
-least partially) using a "curve-matching" approach. It compares a GAMM fitted to
-permanent sample plot (PSP) data to a large collection of theoretical species
-curves, each representing a different set of growth and mortality parameters.
-This also provides a means to calibrate these traits using a dataset that is
-independent from the one used to derive initial landscape conditions and initial
-values of `maxB` and `maxANPP`.
+*Biomass_speciesParameters* attempts to address these issues (at least partially)
+using a "curve-matching" approach. It compares the best fit (according to their 
+AIC) of three non-linear forms (Chapman-Richard's, Gompertz, and a logistic form) 
+fitted to permanent sample plot (PSP) data to a large collection of theoretical 
+(i.e. simulated) species curves, each representing a different set of the five 
+key parameters that govern biomass increment in `Biomass_core`: `growthcurve`, 
+`mortalityshape`, the ratio of `maxANPP` to `maxB`, and `longevity`. This library 
+of curves is produced by the *Biomass_speciesFactorial* module.
 
-While `longevity` is adjusted using published values (see
-*Biomass_borealDataPrep* manual), the remaining four parameters are calibrated
-using the PSP data. Hence, *Biomass_speciesParameters* generally follows other
-data modules, like *Biomass_boreaDataPrep*, that prepare other traits such as
-`longevity`, `maxB` and `maxANPP`.
+*Biomass_speciesParameters* generally follows other LandR data modules, like 
+*Biomass_boreaDataPrep*, which also attempts to calibrate previously estimated 
+spatially varying species traits such as `maxB` and `maxANPP` from the input data
+layers.
 
 #### Permanent sample plot data {#bsppparam-PSPdata}
 
 *Biomass_speciesParameters* can use all the PSP data available (note that it may
-span several thousands of kilometres), or select the data based on a polygon
+span several thousands of kilometres), or select the data based on a shapefile
 (`studyAreaANPP`; see [List of input objects](#bsppparam-inputs-list)).
 
-The default PSP data were initially obtained from the National Forest Inventory
+By default, the PSP data are obtained from the National Forest Inventory
 (NFI), the Alberta Ministry of Agriculture, the Saskatchewan Ministry of the
-Environment, and the British Columbia Ministry of Forests, treated for errors
-and standardized into a single data set with the exact location and identifying
-attributes anonymized. We only share the randomized and anonymized dataset, as data sharing
-agreements must be met to access the raw data.
+Environment, and the British Columbia Ministry of Forests. These data were previously
+treated for errors and standardized into a single dataset with the exact location and identifying
+attributes anonymized.
 
 The data include individual species, diameter at breast height (DBH), and
 sometimes tree height measurements for each tree in a plot, as well as stand
 age. As part of the standardization process, dead trees were removed from the
-dataset. Tree biomass was then estimated by tree species, in $g/m^2$, using either the DBH-only model or a
-DBH-height model from either @LambertEtAl2005 or @UngEtAl2008 (see `P(sim)$biomassModel` module parameter
-in [list of parameters](#bsppparam-params-list)).
+dataset. Tree biomass was then  per species using either a DBH-only model or a
+DBH-height model from @LambertEtAl2005, in $g/m^2$.
+
+Note that the model used to calculate biomass can also be changed to @UngEtAl2008
+via the `P(sim)$biomassModel` module parameter (see [list of parameters](#bsppparam-params-list)).
 
 #### Simulated species data {#bsppparam-simdata}
 
 The *Biomass_speciesFactorial* module was used to create a library of
-theoretical species curves (biomass accumulation curves, to be more precise) to
-which the empirical species curves derived from PSP-biomass are matched for each
-species trait combination in the study area. The library of curves was
+theoretical species curves (biomass accumulation curves, to be more precise) to 
+which the best non-linear model form fit to the PSP-biomass will be matched for
+each species and species combinations in the study area landscape. The library of curves was
 created by running several *Biomass_core* simulations with no reproduction, competition,
 disturbance, or dispersal effects, on the study area. Each simulation differed in
 the combination of species trait values that influence growth and mortality
@@ -246,7 +244,7 @@ maximum biomass (`maxBiomass`, not to be confused with the data-driven `maxB`
 which is later calibrated).
 
 The values for `maxANPP` were explored via the `mANPPproportion`, the ratio of 
-`maxANPP` to `maxBiomass` (the parameter used for theroetical curves), as it 
+`maxANPP` to `maxBiomass` (the parameter used for theoretical curves), as it 
 reflects their relationship.
 
 `growthcurve` values varied from 0 to 1, in increments of 0.1; `mortalityshape`
@@ -265,24 +263,21 @@ re-simulate the theoretical curves.
 
 *Biomass_speciesParameters* calibrates `growthcurve`, `mortalityshape` and
 `mANPPproportion` by matching the theoretical species curves produced by
-*Biomass_speciesFactorial* (`cohortDataFactorial` object) against observed
-species growth curves from permanent sample plot (PSP) data.
+*Biomass_speciesFactorial* (`cohortDataFactorial`) against observed
+species growth curves from the PSP data.
 
-Before fitting the *observed* species growth curves, the module subsets the PSP
+Before calculating the *observed* species growth curves (i.e., the best of three
+non-linear forms to match PSP data), the module subsets the PSP
 data to stand ages below the 95th percent quantile for all species (this can be
 changed via the `P(sim)$quantileAgeSubset` module parameter), as records for
 larger age classes were limited and constituted statistical outliers. In some
 species, changing the quantile value may improve results, however. Two examples
-are *Pinus banksiana* and *Populus sp*, for which using the 99th percent
-quantile improved the models, because these are short-lived species for which
-data at advanced ages is scarce.
+are *Pinus banksiana* and *Populus sp* (in western Canada), for which using the 
+99th percent quantile improved the models, because these are short-lived species
+for which data at advanced ages is scarce.
 
-The module attempts to fit the models using stands where the focal species is 
-dominant (but not monocultures), while balancing sample size (see [biomass
-weighting](#bsppparam-calibbw) below). Hence, for a given species, it only includes plots where the
-species' relative biomass is at least 50%. This is, when calibrating *Populus
-tremuloides* traits, PSP daa plots are only included if 50% of the stand biomass
-is composed of *P. tremuloides*.
+In addition, weights are added at the origin (age = 0 and biomass = 0) to force 
+the intercept to be essentially at 0 age and 0 biomass.
 
 The best fit of three non-linear forms, for each focal species, is then
 calculated. Focal species are defined as either 50% of dominance in the plot, or
@@ -295,34 +290,16 @@ overview of these equations]. Multiple tries using the estimation methods from
 the `robustbase::nlrob` function for each form are used, and the best model fit
 is selected via Akaike Information Criterion (AIC).
 
-Observed growth curves for each species are then fit using generalized additive
-mixed models (GAMMs) that relate species biomass ($B$) with stand age
-($standAge$), accounting for the random effects of the measurement year
-($measureYear$) and plot ($plotID$) on the intercept:
-
 ```{=tex}
-\begin{equation}
-B \sim f_{1}(standAge) + (\sim 1 | measureYear + plotID)
-(\#eq:GAMM)
+\begin{equation} 
+  B \sim A \times (1 - e^{-k \times age})^{p}
+  (\#eq:Chapman)
 \end{equation}
 ```
-where $f_{1}$ denotes the smoother function. To avoid overfitting, the module
-constrains the smoother on stand age to a maximum smoothing degree of 3 (i.e. 3
-knots and a polynomial degree of 2) and a default point constraint at 0 that attempts to
-force the intercept to 0. The smoother degree constraint, however,
-can be changed via the `P(sim)$GAMMknots` module parameter.
-
-##### Biomass-weighting {#bsppparam-calibbw}
-In addition, $B$ is weighted with respect to species dominance. This consisted
-in 1) calculating the average biomass of each dominant species (i.e. relative
-biomass in a plot \> 0.5; $domSpeciesB_{1}$), in each plot and measurement year,
-and 2) dividing the species average biomass by the average biomass across all
-*n* dominant species ($allDomSpeciesB$):
-
 ```{=tex}
-\begin{equation}
-\frac{\overline{\rm domSpeciesB_{1}}}{\overline{\rm allDomSpeciesB}}
-(\#eq:Bweights)
+\begin{equation} 
+  B \sim A \times e^{-k \times e^{-p \times age}}
+  (\#eq:Gompertz)
 \end{equation}
 ```
 ```{=tex}
@@ -331,34 +308,21 @@ and 2) dividing the species average biomass by the average biomass across all
   (\#eq:Logistic)
 \end{equation}
 ```
-<!-- below is the old GAMM equation -->
-
-<!-- ```{=tex} -->
-
-<!-- \begin{equation}  -->
-
-<!--   B \sim f_{1}(standAge) + (\sim 1 | measureYear + plotID) -->
-
-<!--   (\#eq:GAMM) -->
-
-<!-- \end{equation} -->
-
-<!-- ``` -->
 
 Species biomass ($B$) is estimated as a function of stand age ($age$), with the
 best values of the $A$, $k$ and $p$ parameters to fit the PSP data.
 
 It is possible that some selected species do not have enough data to allow for
-model convergence. In this case, *Biomass_speciesParameters* skips trait
-(re-)calibration, and values remain unchanged.
+model convergence. In this case, *Biomass_speciesParameters* skips parameter
+calibration, and parameter values remain unchanged.
 
-After fitting each species GAMM, *Biomass_speciesParameters* compares it to the
-theoretical curves obtained with a `longevity` value that matches the focal
-species' longevity, and picks the best one based on maximum likelihood. This best
-theoretical curve will be associated with a given combination of `growthcurve`,
-`mortalityshape` and `mANPPproportion` values, which are then used directly as
-the calibrated values, in case of `growthcurve` and `mortalityshape`, or to
-calibrate `maxANPP` in the case of `mANPPproportion` (see below).
+After each species best fit is selected (using AIC), *Biomass_speciesParameters*
+compares it to the library of theoretical curves, and picks the best one based
+on maximum likelihood. This best theoretical curve will be associated with a
+given combination of `growthcurve`, `mortalityshape` and `maxANPPproportion`
+values, which are then used directly as the calibrated values, in case of
+`growthcurve` and `mortalityshape`, or to calibrate `maxANPP` in the case of
+`maxANPPproportion` (see below).
 
 The user has the option to constrain the values of the `growthcurve` and
 `mortalityshape` parameters. By default, `growthcurve` is forced to 0.5,
@@ -398,9 +362,9 @@ maxB \times \frac{mANPPproportion}{100}
 where `maxB` is the already (re-)calibrated version. As already stated above, the
 final `maxANPP` value is then constrained between 2.0 and 5.0 by default.
 
-In cases where insufficient PSP data prevent fitting the GAMMs and performing
-the calibration, `mANPPproportion` defaults to 3.33 (the value used in LANDIS-II
-applications in Canada's boreal forests) and the `inflationFactor` to 1.
+In cases where there are not sufficient PSP data to fit the growth models and 
+perform the calibration, `mANPPproportion` defaults to 3.33 (the value used in LANDIS-II
+applications in Canada's boreal forests) and the `inflationFactor` defaults to 1.
 
 ### List of input objects {#bsppparam-inputs-list}
 
@@ -415,25 +379,26 @@ attention:
 
 **Spatial layers**
 
--   `studyAreaANPP` -- shapefile. A `SpatialPolygonsDataFrame` with a single
-polygon determining the where the PSP should be subset to simulation will
-take place. This input object **must be supplied by the user or another module**.
+    -   `studyAreaANPP` -- shapefile. A `SpatialPolygonsDataFrame` with a single
+        polygon determining the where the PSP should be subset to simulation
+        will take place. This input object **must be supplied by the user**.
 
-**Tables**
+-   **Tables**
 
--   `factorialSpeciesTable` and `reducedFactorialCohortData` -- a tables of
-species trait combinations and the theoretical species grwoth curve data
-(respectively).
--   `PSPmeasure`, `PSPplot` and `PSPgis` -- tree measurement, biomass growth and
-geographical data of the PSP datasets used to build observed species growth
-curves.
--   `species` -- a table of invariant species traits that may have been produced
-by another module. It **must** contain the columns 'species', 'growthcurve'
-and 'mortality shape', whose values will be calibrated.
--   `speciesEcoregion` -- table of spatially-varying species traits that may
-have been produced by another module. It **must** contain the columns
-'speciesCode', 'maxB' and 'maxANPP' and 'ecoregionGroup' (the ecolocation
-ID). 'maxB' and 'maxANPP' values are (re-)calibrated by species.
+    -   `speciesTableFactorial` and `cohortDataFactorial` -- a tables of species
+        trait combinations and the theoretical species grwoth curve data
+        (respectively)
+    -   `PSPmeasure_sppParams`, `PSPplot_sppParams` and `PSPgis_sppParams` --
+        tree measurement, biomass growth and geographical data of the PSP
+        datasets used to buildi observed species growth curves.
+    -   `species` -- a table of invariant species traits that may have been
+        produced by another module. It **must** contain the columns 'species',
+        'growthcurve' and 'mortality shape', whose values will be calibrated.
+    -   `speciesEcoregion` -- table of spatially-varying species traits that may
+        have been produced by another module. It **must** contain the columns
+        'speciesCode', 'maxB' and 'maxANPP' and 'ecoregionGroup' (the
+        ecolocation ID). 'maxB' and 'maxANPP' values will be calibrated by
+        species.
 
 \newpage
 \blandscape
@@ -487,7 +452,6 @@ the GAMMs.
 \newpage
 \blandscape
 
-
 ```{r moduleParams2-Biomass-speciesParameters, echo = FALSE, eval = TRUE, message = FALSE, results = 'asis'}
 df_params <- moduleParams("Biomass_speciesParameters", "..")
 caption <- "List of (ref:Biomass-speciesParameters) parameters and their description."
@@ -523,15 +487,14 @@ panble(df_outputs, caption,
 
 ### Simulation flow and module events {#bsppparam-sim-flow}
 
-*Biomass_speciesParameters* initialies itself and prepares all inputs provided
+*Biomass_speciesParameters* initializes itself and prepares all inputs provided
 there is an active internet connection and the user has access to the data (and
 a Google Account to do so).
 
 We advise future users to run *Biomass_speciesParameters* with defaults and
 inspect what the objects are like before supplying their own data. The user does
 not need to run *Biomass_speciesFactorial* to generate their own theoretical
-curves (unless they wish to), as the module accesses a pre-generated on-line
-library with these simulated data.
+curves (unless they wish to), as the module accesses pre-generated theoretical curves.
 
 Note that this module only runs once (in one "time step") and only executes one
 event (`init`). The general flow of *Biomass_speciesParameters* processes is:
@@ -540,7 +503,7 @@ event (`init`). The general flow of *Biomass_speciesParameters* processes is:
 parameter fitting (e.g., the theoretical species growth curve data);
 
 2.  Sub-setting PSP data and calculating the observed species growth curves
-using GAMMs;
+    using non-linear growth models;
 
 3.  Finding the theoretical species growth curve that best matches the observed
 curve, for each species. Theoretical curves are subset to those with longevity
@@ -558,9 +521,9 @@ matching the species' longevity (in `species` table) and with
 This module can be run stand-alone, but it won't do much more than calibrate
 species trait values based on dummy input trait values. We provide an example of
 this below, since it may be of value to run the module by itself to become
-acquainted with the calibration process and explore the fitted GAMMs. However,
-we remind that to run this example you will need a Google Account, and access to
-the data may need to be granted.
+acquainted with the calibration process and explore the fitted non-linear
+models. However, we remind that to run this example you will need a Google
+Account, and to be granted access to the data.
 
 A realistic usage example of this module and a few others can be found in [this
 repository](https://github.com/CeresBarros/LandRBiomass_publication) and in
