--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -565,35 +565,11 @@ modules <- list("Biomass_speciesParameters")
 
 #the purpose of this table is experiment with modify longevity - longevity is not estimated by the module
 #but it is used in trait estimation. 
-inputSpecies <- data.table(species = c("Abie_bal", 'Abie_las', 'Betu_pap', 
-                                       'Lari_lar', 'Pice_eng', 'Pice_gla', 
-                                       'Pice_mar', 'Pinu_ban', 'Pinu_con', 
-                                       'Pseu_men', "Popu_tre"),
-                           longevity = c(300, 300, 170, 170, 330, 250, 
-                                         250, 175, 300, 600, 200),
-                           mortalityshape = 15, growthcurve = 0)
-objects <- list(species = inputSpecies)
 
+objects <- list()
 inputs <- list()
 outputs <- list()
-
-parameters <- list(Biomass_speciesParameters = 
-                     list(quantileAgeSubset = list(
-                            "Abie_bal" = 95, 
-                            "Abie_las" = 95,
-                            "Betu_pap" = 95,
-                            "Lari_lar" = 95,
-                            "Pice_eng" = 95,
-                            "Pice_gla" = 95,
-                            "Pice_mar" = 95,
-                            "Pinu_ban" = 95,
-                            "Pinu_con" = 99, 
-                            "Popu_tre" = 99,
-                            "Pseu_men" = 99
-                          )
-                     ))
-
-
+parameters <- list()
 mySim <- simInitAndSpades(times = times, 
                           params = parameters, 
                           modules = modules, 
